refactor: clean up the `Given opened faulty frege file` test class