@@ -4,8 +4,6 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.params.provider.Arguments.arguments;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.timeout;
 
 import java.io.IOException;
@@ -37,10 +35,6 @@ import org.eclipse.lsp4j.TextDocumentContentChangeEvent;
 import org.eclipse.lsp4j.TextDocumentIdentifier;
 import org.eclipse.lsp4j.TextDocumentItem;
 import org.eclipse.lsp4j.VersionedTextDocumentIdentifier;
-import org.eclipse.lsp4j.services.LanguageClient;
-import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.DisplayNameGeneration;
 import org.junit.jupiter.api.DisplayNameGenerator;
 import org.junit.jupiter.api.Nested;
@@ -52,7 +46,6 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.mockito.ArgumentCaptor;
-import org.mockito.Captor;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 
@@ -61,8 +54,6 @@ class FregeTextDocumentServiceTest {
     private static final String CORRECT_FREGE_FILENAME    = "CorrectFregeTest.fr";
     private static final String FAULTY_FREGE_FILENAME     = "FaultyFregeTest.fr";
     private static final String ERROR_SOURCE              = "fregeCompiler";
-    private String correctFregeFileContents;
-    private String faultyFregeFileContents;
     private List<Diagnostic> expectedErrorDiagnostics;
     private List<Diagnostic> expectedTypeErrorDiagnostics = List.of(
         new Diagnostic(
@@ -104,19 +95,6 @@ class FregeTextDocumentServiceTest {
             readFileFromTestResources(filename)
         );
     }
-
-    /*@BeforeAll
-    void setup() throws Exception {
-        correctFregeFileContents = readFileFromTestResources(CORRECT_FREGE_FILENAME);
-        faultyFregeFileContents = readFileFromTestResources(FAULTY_FREGE_FILENAME);
-        final String expectedCompilerMessage = "String is not an instance of Num";
-        final String diagnosticSource = "fregeCompiler";
-        expectedErrorDiagnostics = List.of(
-                new Diagnostic(new Range(new Position(7, 0), new Position(7, 11)), expectedCompilerMessage,
-                        DiagnosticSeverity.Error, diagnosticSource),
-                (new Diagnostic(new Range(new Position(5, 0), new Position(5, 22)), expectedCompilerMessage,
-                        DiagnosticSeverity.Error, diagnosticSource)));
-    }*/
 
     @Nested
     @TestInstance(Lifecycle.PER_CLASS)
@@ -197,7 +175,7 @@ class FregeTextDocumentServiceTest {
         }
 
         @Test
-        void should_not_publish_any_compiler_errors() throws Exception
+        void should_not_publish_any_errors_as_diagnostics() throws Exception
         {
             FregeLSPDTO fregeLSPDTO = new FregeLSPDTO();
             FregeTextDocumentService service = new FregeTextDocumentService(fregeLSPDTO.getServer());
@@ -218,7 +196,7 @@ class FregeTextDocumentServiceTest {
         }
 
         @Test
-        void should_not_publish_any_compile_errors_when_no_changes_and_did_save()
+        void should_not_publish_any_errors_as_diagnostics_when_no_changes_and_did_save()
         throws Exception 
         {
             FregeLSPDTO fregeLSPDTO = new FregeLSPDTO();
@@ -244,7 +222,7 @@ class FregeTextDocumentServiceTest {
         }
 
         @Test
-        void should_publish_error_diagnostics_when_error_changes_and_did_save()
+        void should_publish_all_errors_as_diagnostics_when_error_changes_and_did_save()
         throws Exception
         {
             FregeLSPDTO fregeLSPDTO = new FregeLSPDTO();
@@ -254,7 +232,6 @@ class FregeTextDocumentServiceTest {
                 correctFregeFile.getUri(),
                 correctFregeFile.getVersion()
             );
-            faultyFregeFileContents = readFileFromTestResources(FAULTY_FREGE_FILENAME);
             ArgumentCaptor<PublishDiagnosticsParams> diagnosticCaptor = 
                 ArgumentCaptor.forClass(PublishDiagnosticsParams.class);
             
@@ -275,12 +252,12 @@ class FregeTextDocumentServiceTest {
                     createRange(7, 0, 7, 11),
                     "String is not an instance of Num",
                     DiagnosticSeverity.Error,
-                    "fregeCompiler"),
+                    ERROR_SOURCE),
                 new Diagnostic(
                     createRange(5, 0, 5, 22),
                     "String is not an instance of Num",
                     DiagnosticSeverity.Error,
-                    "fregeCompiler")
+                    ERROR_SOURCE)
             );
             PublishDiagnosticsParams expectedErrors = 
                 new PublishDiagnosticsParams(correctFregeFile.getUri(), expectedErrorDiagnostics);
@@ -292,66 +269,113 @@ class FregeTextDocumentServiceTest {
         }
     }
 
-    /*@TestInstance(Lifecycle.PER_CLASS)
+    @TestInstance(Lifecycle.PER_CLASS)
     @Nested
     @DisplayNameGeneration(DisplayNameGenerator.ReplaceUnderscores.class)
     @ExtendWith(MockitoExtension.class)
-    class Given_opened_faulty_frege_file {
+    class Given_opened_faulty_frege_file
+    {
+        @Test
+        void should_publish_all_errors_as_diagnostics() throws Exception
+        {
+            FregeLSPDTO fregeLSPDTO = new FregeLSPDTO();
+            FregeTextDocumentService service = new FregeTextDocumentService(fregeLSPDTO.getServer());
+            TextDocumentItem faultyFregeFile = readFileToTextDocumentItem(FAULTY_FREGE_FILENAME);
+            ArgumentCaptor<PublishDiagnosticsParams> diagnosticCaptor = 
+                ArgumentCaptor.forClass(PublishDiagnosticsParams.class);
 
-        private TextDocumentItem faultyFregeFile;
-        FregeLanguageServer server;
-        LanguageClient client;
-        FregeTextDocumentService service;
-
-        @Captor
-        ArgumentCaptor<PublishDiagnosticsParams> diagnosticCaptor;
-
-        @BeforeAll
-        void setup() throws Exception {
-            faultyFregeFile = readFileToTextDocumentItem(FAULTY_FREGE_FILENAME);
-        }
-
-        @BeforeEach
-        void init() {
-            server = spy(FregeLanguageServer.class);
-            client = mock(LanguageClient.class);
-            server.connect(client);
-            service = new FregeTextDocumentService(server);
             service.didOpen(new DidOpenTextDocumentParams(faultyFregeFile));
-        }
-
-        @Test
-        void then_publish_all_errors_as_diagnostics() {
-            Mockito.verify(client, timeout(1000)).publishDiagnostics(diagnosticCaptor.capture());
-            PublishDiagnosticsParams expectedErrors = new PublishDiagnosticsParams(faultyFregeFile.getUri(),
-                    expectedErrorDiagnostics);
+            
+            List<Diagnostic> expectedErrorDiagnostics = List.of(
+                new Diagnostic(
+                    createRange(7, 0, 7, 11),
+                    "String is not an instance of Num",
+                    DiagnosticSeverity.Error,
+                    ERROR_SOURCE),
+                new Diagnostic(
+                    createRange(5, 0, 5, 22),
+                    "String is not an instance of Num",
+                    DiagnosticSeverity.Error,
+                    ERROR_SOURCE)
+            );
+            Mockito
+                .verify(fregeLSPDTO.getClient(), timeout(1000))
+                .publishDiagnostics(diagnosticCaptor.capture());
+            PublishDiagnosticsParams expectedErrors = 
+                new PublishDiagnosticsParams(faultyFregeFile.getUri(), expectedErrorDiagnostics);
             assertEquals(expectedErrors, diagnosticCaptor.getValue());
         }
 
         @Test
-        void when_no_changes_and_did_save_then_publish_all_errors_as_diagnostics() {
-            PublishDiagnosticsParams expectedErrors = new PublishDiagnosticsParams(faultyFregeFile.getUri(),
-                    expectedErrorDiagnostics);
+        void should_publish_all_errors_as_diagnostics_when_no_changes_and_did_save()
+        throws Exception
+        {
+            FregeLSPDTO fregeLSPDTO = new FregeLSPDTO();
+            FregeTextDocumentService service = new FregeTextDocumentService(fregeLSPDTO.getServer());
+            TextDocumentItem faultyFregeFile = readFileToTextDocumentItem(FAULTY_FREGE_FILENAME);
+            ArgumentCaptor<PublishDiagnosticsParams> diagnosticCaptor = 
+                ArgumentCaptor.forClass(PublishDiagnosticsParams.class);
 
-            service.didSave(new DidSaveTextDocumentParams(new TextDocumentIdentifier(faultyFregeFile.getUri())));
-            Mockito.verify(client, timeout(1000).times(2)).publishDiagnostics(diagnosticCaptor.capture());
+            service.didOpen(new DidOpenTextDocumentParams(faultyFregeFile));
+            service.didSave(new DidSaveTextDocumentParams(
+                    new TextDocumentIdentifier(faultyFregeFile.getUri()))
+            );
+            
+            List<Diagnostic> expectedErrorDiagnostics = List.of(
+                new Diagnostic(
+                    createRange(7, 0, 7, 11),
+                    "String is not an instance of Num",
+                    DiagnosticSeverity.Error,
+                    ERROR_SOURCE),
+                new Diagnostic(
+                    createRange(5, 0, 5, 22),
+                    "String is not an instance of Num",
+                    DiagnosticSeverity.Error,
+                    ERROR_SOURCE)
+            );
+            Mockito
+                .verify(fregeLSPDTO.getClient(), timeout(1000)
+                .times(2))
+                .publishDiagnostics(diagnosticCaptor.capture());
+            PublishDiagnosticsParams expectedErrors = 
+                new PublishDiagnosticsParams(faultyFregeFile.getUri(), expectedErrorDiagnostics);
             assertEquals(expectedErrors, diagnosticCaptor.getValue());
         }
 
         @Test
-        void when_correcting_changes_and_did_save_then_no_more_errors_are_published() {
-            VersionedTextDocumentIdentifier id = new VersionedTextDocumentIdentifier(faultyFregeFile.getUri(),
-                    faultyFregeFile.getVersion());
-            DidChangeTextDocumentParams params = new DidChangeTextDocumentParams(id,
-                    List.of(new TextDocumentContentChangeEvent(correctFregeFileContents)));
-            PublishDiagnosticsParams expected = new PublishDiagnosticsParams(faultyFregeFile.getUri(),
-                    Collections.emptyList());
+        void should_not_publish_any_errors_as_diagnostics_when_correcting_changes_and_did_save()
+        throws Exception
+        {
+            FregeLSPDTO fregeLSPDTO = new FregeLSPDTO();
+            FregeTextDocumentService service = new FregeTextDocumentService(fregeLSPDTO.getServer());
+            TextDocumentItem faultyFregeFile = readFileToTextDocumentItem(FAULTY_FREGE_FILENAME);
+            VersionedTextDocumentIdentifier id = new VersionedTextDocumentIdentifier(
+                faultyFregeFile.getUri(),
+                faultyFregeFile.getVersion()
+            );
+            DidChangeTextDocumentParams params = new DidChangeTextDocumentParams(
+                id,
+                List.of(new TextDocumentContentChangeEvent(
+                    readFileFromTestResources(CORRECT_FREGE_FILENAME)))
+            );
+            PublishDiagnosticsParams expected = new PublishDiagnosticsParams(
+                faultyFregeFile.getUri(),
+                Collections.emptyList()
+            );
+            ArgumentCaptor<PublishDiagnosticsParams> diagnosticCaptor = 
+                ArgumentCaptor.forClass(PublishDiagnosticsParams.class);
 
+            service.didOpen(new DidOpenTextDocumentParams(faultyFregeFile));
             service.didChange(params);
-            service.didSave(new DidSaveTextDocumentParams(new TextDocumentIdentifier(faultyFregeFile.getUri())));
+            service.didSave(new DidSaveTextDocumentParams(
+                new TextDocumentIdentifier(faultyFregeFile.getUri()))
+            );
 
-            Mockito.verify(client, timeout(1000).times(2)).publishDiagnostics(diagnosticCaptor.capture());
+            Mockito
+                .verify(fregeLSPDTO.getClient(), timeout(1000)
+                .times(2))
+                .publishDiagnostics(diagnosticCaptor.capture());
             assertEquals(expected, diagnosticCaptor.getValue());
         }
-    }*/
+    }
 }
